--- a/inst/rmarkdown/templates/Tmisc/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/Tmisc/skeleton/skeleton.Rmd
@@ -19,6 +19,7 @@ output:
 # geometry: margin=1in
 # bibliography: bibliography.bib
 header-includes:
+- \usepackage{float}
 - \renewcommand{\abstractname}{Executive Summary} # Changes the name of the abstract section.
 # - \usepackage[dvipsnames]{xcolor}                 # Allows using dvips color names
 # - \usepackage[final]{pdfpages}                    # Allows inserting PDFs as additional pages
@@ -42,7 +43,7 @@ header-includes:
 library(knitr)
 library(tidyverse)
 theme_set(theme_bw())
-opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
+opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE, fig.align="center", fig.pos="H")
 ```
 
 
